--- a/Views/Student/Index.cshtml
+++ b/Views/Student/Index.cshtml
@@ -3,6 +3,18 @@
 *@
 @{
 }
+@{
+    ViewData["Title"] = "Student List";
+    Layout = "~/Views/Shared/MyLayout.cshtml";
+}
+@section Scripts{
+    <script>
+        var table = document.querySelector("table");
+        table.onclick = function onTableClick() {
+            table.style = "background-color: yellow;"
+        }
+    </script>
+}
 @model IEnumerable<Student>
 <a asp-action="Create" class="btn btn-primary">Create Student</a>
 <table class="table table-striped">
